Modified Java Memory Model readme file to include changes made to memory management in JDK8